[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/scripts/mob_spawner.gd" type="Script" id=1]
[ext_resource path="res://assets/art/grave.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 1 )

[node name="MobSpawner" type="Node2D"]
script = ExtResource( 1 )
mobs = [ "res://assets/objects/bases/BaseEnemy.tscn" ]

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -6 )
texture = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -7, -12, 14, 14 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 0, 1 )
collision_layer = 3
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )
[connection signal="timeout" from="Timer" to="." method="_on_timer_finished"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_screen_exited"]
